Fix bug where using 100vh forces buttons outside visible area
Problem:

Using 100vh on mobile devices can lead to certain UI elements being
behind browser elements which cause the interface to become
inaccessible.

Solution:

This change opts to replace 100vh by propoagating height:"100%" down the
DOM hierarchy in order to more accurately capture the intent of having a
fully visible UI container.

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,13 @@
     }
 }
 
+:root {
+    height: 100%;
+}
+
+#root {
+    height: 100%;
+}
 
 body {
     box-sizing: border-box;
